# yolov5

./: .gitignore  pyproject.toml
data/: PinterestData.yaml
src/yolo/: __init__.py
